<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0"
        android:padding="10dp"
        android:text="@string/name_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/name_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month_label"
        android:layout_width="146dp"
        android:layout_height="42dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0"
        android:padding="10dp"
        android:text="@string/month_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/month_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="231dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/month_label"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <TextView
        android:id="@+id/day_label"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0"
        android:padding="10dp"
        android:text="@string/day_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/day_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_label" />

    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day_label"
        app:layout_constraintTop_toBottomOf="@+id/month_spinner" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_submit"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_label" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_reset"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/submit_button"
        app:layout_constraintTop_toBottomOf="@+id/day_spinner" />

    <TextView
        android:id="@+id/entry_label"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0"
        android:padding="10dp"
        android:text="@string/count_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/count_display"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <TextView
        android:id="@+id/count_display"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/entry_label"
        app:layout_constraintTop_toBottomOf="@+id/reset_button" />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/message_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_display" />


</android.support.constraint.ConstraintLayout>